name:                aoc2019
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/WhoMeNope/aoc2019#readme
license:             MIT
license-file:        LICENSE
author:              Martin Toman
maintainer:          whomenope@outlook.com
copyright:           Martin Toman 2019
category:            AOC
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
